Closed
Bug 12470
Opened 26 years ago
Closed 26 years ago
RDF failure encountered when attempting to capture password
Categories
(Core Graveyard :: RDF, defect, P3)
Tracking
(Not tracked)
VERIFIED
FIXED
M10
People
(Reporter: morse, Assigned: waterson)
References
Details
Go to a page that requires a login, such as http://scopus/bugsplat/login.html.
Fill in the form and press submit. Answer yes to the question (or questions)
about saving your password. You then get to an assertion failure as shown
below. Attempting to resume from the assertion failure gets you to a hard
crash, also shown below.
***** ASSERTION FAILURE ************
NTDLL! 77f76274()
nsDebug::PreCondition(const char * 0x0138cdec
??_C@_0DJ@KMGL@You?5can?8t?5dereference?5a?5NULL?5nsC@, const char * 0x0138ce30
??_C@_0N@NHHF@mRawPtr?5?$CB?$DN?50?$AA@, const char * 0x0138d498
??_C@_0CB@MCGB@?4?4?2?4?4?2?4?4?2dist?2include?2nsCOMPtr?4h@, int 596) line 152
+ 13 bytes
nsCOMPtr<nsIDOMXULDocument>::operator->() line 596 + 34 bytes
RDFElementImpl::SetParent(RDFElementImpl * const 0x039a0d80, nsIContent *
0x00000000) line 1681 + 39 bytes
RDFElementImpl::~RDFElementImpl() line 586
RDFElementImpl::`scalar deleting destructor'(unsigned int 1) + 15 bytes
RDFElementImpl::Release(RDFElementImpl * const 0x0316f830) line 664 + 102 bytes
nsSupportsArray::Clear(nsSupportsArray * const 0x0316e2b0) line 313 + 36 bytes
nsSupportsArray::DeleteArray() line 58
nsSupportsArray::~nsSupportsArray() line 35
nsSupportsArray::`scalar deleting destructor'(unsigned int 1) + 15 bytes
nsSupportsArray::Release(nsSupportsArray * const 0x0316e2b0) line 53 + 95 bytes
RDFElementImpl::~RDFElementImpl() line 587 + 18 bytes
RDFElementImpl::`scalar deleting destructor'(unsigned int 1) + 15 bytes
RDFElementImpl::Release(RDFElementImpl * const 0x031689f0) line 664 + 102 bytes
nsJSUtils::nsGenericFinalize(JSContext * 0x039bc190, JSObject * 0x02a90108) line
345 + 12 bytes
FinalizeXULElement(JSContext * 0x039bc190, JSObject * 0x02a90108) line 307 + 13
bytes
js_FinalizeObject(JSContext * 0x039bc190, JSObject * 0x02a90108) line 1259 + 114
bytes
js_GC(JSContext * 0x039bc190) line 832 + 11 bytes
js_ForceGC(JSContext * 0x039bc190) line 615 + 9 bytes
JS_GC(JSContext * 0x039bc190) line 1073 + 9 bytes
nsJSContext::GC(nsJSContext * const 0x039bcdb0) line 338 + 13 bytes
nsWebShell::Embed(nsWebShell * const 0x039b9660, nsIContentViewer * 0x030e2f00,
const char * 0x030e4ee0, nsISupports * 0x00000000) line 924
nsDocumentBindInfo::OnStartRequest(nsDocumentBindInfo * const 0x030e49c0,
nsIChannel * 0x030e2be0, nsISupports * 0x00000000) line 1949 + 36 bytes
nsOnStartRequestEvent::HandleEvent(nsOnStartRequestEvent * const 0x030e2ad0)
line 207
nsStreamListenerEvent::HandlePLEvent(PLEvent * 0x030e2ad4) line 144 + 12 bytes
PL_HandleEvent(PLEvent * 0x030e2ad4) line 509 + 10 bytes
PL_ProcessPendingEvents(PLEventQueue * 0x039bb500) line 470 + 9 bytes
_md_EventReceiverProc(HWND__ * 0x005703aa, unsigned int 49404, unsigned int 0,
long 60536064) line 938 + 9 bytes
USER32! 77e71268()
039bb50
************ HARD CRASH ******************
RDFElementImpl::SetParent(RDFElementImpl * const 0x039a0d80, nsIContent *
0x00000000) line 1681 + 51 bytes
RDFElementImpl::~RDFElementImpl() line 586
RDFElementImpl::`scalar deleting destructor'(unsigned int 1) + 15 bytes
RDFElementImpl::Release(RDFElementImpl * const 0x0316f830) line 664 + 102 bytes
nsSupportsArray::Clear(nsSupportsArray * const 0x0316e2b0) line 313 + 36 bytes
nsSupportsArray::DeleteArray() line 58
nsSupportsArray::~nsSupportsArray() line 35
nsSupportsArray::`scalar deleting destructor'(unsigned int 1) + 15 bytes
nsSupportsArray::Release(nsSupportsArray * const 0x0316e2b0) line 53 + 95 bytes
RDFElementImpl::~RDFElementImpl() line 587 + 18 bytes
RDFElementImpl::`scalar deleting destructor'(unsigned int 1) + 15 bytes
RDFElementImpl::Release(RDFElementImpl * const 0x031689f0) line 664 + 102 bytes
nsJSUtils::nsGenericFinalize(JSContext * 0x039bc190, JSObject * 0x02a90108) line
345 + 12 bytes
FinalizeXULElement(JSContext * 0x039bc190, JSObject * 0x02a90108) line 307 + 13
bytes
js_FinalizeObject(JSContext * 0x039bc190, JSObject * 0x02a90108) line 1259 + 114
bytes
js_GC(JSContext * 0x039bc190) line 832 + 11 bytes
js_ForceGC(JSContext * 0x039bc190) line 615 + 9 bytes
JS_GC(JSContext * 0x039bc190) line 1073 + 9 bytes
nsJSContext::GC(nsJSContext * const 0x039bcdb0) line 338 + 13 bytes
nsWebShell::Embed(nsWebShell * const 0x039b9660, nsIContentViewer * 0x030e2f00,
const char * 0x030e4ee0, nsISupports * 0x00000000) line 924
nsDocumentBindInfo::OnStartRequest(nsDocumentBindInfo * const 0x030e49c0,
nsIChannel * 0x030e2be0, nsISupports * 0x00000000) line 1949 + 36 bytes
nsOnStartRequestEvent::HandleEvent(nsOnStartRequestEvent * const 0x030e2ad0)
line 207
nsStreamListenerEvent::HandlePLEvent(PLEvent * 0x030e2ad4) line 144 + 12 bytes
PL_HandleEvent(PLEvent * 0x030e2ad4) line 509 + 10 bytes
PL_ProcessPendingEvents(PLEventQueue * 0x039bb500) line 470 + 9 bytes
_md_EventReceiverProc(HWND__ * 0x005703aa, unsigned int 49404, unsigned int 0,
long 60536064) line 938 + 9 bytes
USER32! 77e71268()
03
| Assignee | ||
Updated•26 years ago
|
Status: NEW → ASSIGNED
Target Milestone: M10
| Assignee | ||
Comment 1•26 years ago
|
||
i'll take a look...
| Assignee | ||
Updated•26 years ago
|
Status: ASSIGNED → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
| Assignee | ||
Comment 2•26 years ago
|
||
Fixed. Added check for null mDocument, which happens because SetParent(null) is
called during teardown.
verified fixed (no more crash) on
1999-08-27-05-M10 RedHat Linux 6.0 (GNOME/enlightenment)
1999-08-27-09-M10 WinNT 4.0 sp5
1999-08-27-12-M10 MacOS 8.51
Updated•7 years ago
|
Product: Core → Core Graveyard
| Comment hidden (collapsed) |
You need to log in
before you can comment on or make changes to this bug.
Description
•