Bug 12470. Check for null pointer in SetParent(); occurs during teardown.